# cubing.rs

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: nix.yml
benches/: cube3x3.rs  kociemba.rs  transitions.rs
src/: corners.rs  definitions.rs  kociemba.rs  lib.rs  main.rs  oriented.rs  permutations.rs  pruning.rs  rubiks.rs  search.rs  transition.rs  turns.rs  util.rs
src/algorithm/: mod.rs
src/algorithm/kociemba/: phase1.rs
src/algorithm/kociemba/phase2/: mod.rs
src/algorithms/kociemba/: mod.rs  phase1.rs
src/algorithms/kociemba/phase2/: mod.rs
src/core/: definitions.rs  mod.rs  pruning.rs  search.rs  transition.rs
src/kociemba/: mod.rs  phase1.rs
src/kociemba/phase2/: mod.rs  moves.rs
src/metric/: mod.rs
src/metric/htm/: domino.rs  mod.rs  moves.rs  ruf.rs
src/notation/: htm.rs  mod.rs
src/puzzle/: cube2x2.rs  cube3x3.rs  domino.rs  mod.rs  positions.rs
src/rubiks/: cube.rs  cube3x3.rs  mod.rs  moves.rs  positions.rs
