[package]
name = "cubing"
version = "0.1.0"
authors = ["Kevin Mullins <kevin@pnotequalnp.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports", "real_blackbox"] }
once_cell = "1.7.2"

[[bench]]
name = "kociemba"
harness = false
