[package]
name = "cubing"
description = "Rubik's cube simultation and solving"
repository = "https://github.com/pnotequalnp/cubing.rs"
version = "0.1.0"
authors = ["Kevin Mullins <kevin@pnotequalnp.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
wasm-bindgen = "0.2"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports", "real_blackbox"] }
once_cell = "1.7.2"

[[bench]]
name = "cube3x3"
harness = false

[[bench]]
name = "kociemba"
harness = false
